# Quizzer

./: .gitattributes  .gitignore  LICENSE  README.md  alembic.ini  check_migration_status.py  package.json  pyproject.toml  render-start.sh  requirements.txt  run_lint.bat  sitecustomize.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  wiki-sync.yml
backend/: .env.example  __init__.py  main.py  run_api.py
backend/ai/agents/: answer_key_agent.py  generation_prompt_builder.py  prompt_enchancer_agent.py  quiz_generator_agent.py  short_answer_evaluator.py  summarization_agent.py
backend/ai/graphs/: quiz_creation_graph.py  result_processing_graph.py
backend/ai/schemas/: evaluation.py  generation.py  summarization.py
backend/alembic/: env.py
backend/alembic/versions/: 3c4d5e6f7a8b_add_public_id_to_quizzes.py  636d1c93c699_add_question_status.py  646207996c3a_add_role_to_users.py  6a8194a5eb0c_add_question_text_to_questions.py  7d0a2f1b3c9a_add_question_order_index.py  7d82a54a4e37_add_question_status.py  7f1f3f176c24_add_public_slug_to_quizzes.py  9b2f9da4e1ac_add_quiz_id_to_questions.py  a1f9b3c7d2e4_add_difficulty_to_questions.py  a8b7c6d5e4f3_add_auth_sessions.py  b4c5d6e7f8a9_add_notifications_inbox.py  b8c1d2e3f4a5_add_quiz_settings_json.py  c1a2b3d4e5f6_add_exam_duration_and_institution_type.py  c4d5e6f7a8b9_add_quiz_archive_flag.py  c9f8e7d6b5a4_add_google_auth_fields_to_users.py  (+8 more)
backend/api/: ai_jobs.py  ai_quiz.py  answers.py  attemps.py  auth.py  dashboard.py  deps.py  document.py  feedback.py  google_auth.py  monitoring.py  notifications.py  questions.py  quizzes.py  results.py  review.py  sections.py  users.py  violations.py
backend/core/: config.py  database.py  llm.py  redis.py  security.py
backend/integrations/: youtube.py
backend/lib/: getCaptions.py
backend/models/: __init__.py  ai_job.py  answer.py  attempt.py  auth_otp.py  auth_session.py  base.py  document.py  email_verification_token.py  notification_message.py  notification_read.py  question.py  quiz.py  quiz_section.py  quiz_settings.py  result.py  student_profile.py  user.py  violation.py
backend/schemas/: answer.py  attempt.py  auth.py  feedback.py  notification.py  summarization.py  user.py
backend/services/: auth_sessions.py  cloudinary.py  communication_service.py  document_service.py  email_service.py  email_verification_service.py  evaluation_service.py  export_service.py  google_auth.py  question_quality.py  task_dispatcher.py  verification.py
backend/tests/: test_feedback_api.py  test_google_auth.py  test_question_quality.py  test_result_processing_graph.py  test_youtube_integration.py
backend/utils/: file_utils.py
backend/workers/: celery_app.py  document_task.py  export_task.py  quiz_creation_task.py  result_processing_task.py  task_db.py
docs/: architecture.md
docs/wiki/: Home.md
frontend/: .env.example  Dockerfile  next.config.js  package-lock.json  package.json  sentry.client.config.ts  sentry.server.config.ts  tsconfig.json
profile/: PROFILE_GUIDE.md  README.md
(+154 files in other folders)
