
[project]
name = "Quizzer"
version = "0.1.0"
description = "Backend-authoritative AI-powered quiz and assessment platform"
requires-python = ">=3.11"

dependencies = [
    # Core API
    "fastapi",
    "uvicorn[standard]",
    # Database
    "sqlalchemy>=2.0",
    "asyncpg",
    "psycopg[binary]",
    "alembic",
    # Settings & Validation
    "pydantic>=2.0",
    "pydantic-settings",
    "pydantic[email]",
    "python-multipart",
    # Authentication & Security
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "argon2-cffi",
    "itsdangerous",
    # Background Jobs & Cache
    "redis",
    "celery[redis]",
    # AI / LLM Stack
    "langchain-core",
    "langchain-openai",
    "langgraph",
    "tiktoken",
    "tenacity",
    # File Processing
    "pdfplumber",
    "pymupdf",
    "python-docx",
    "python-pptx",
    "pytesseract",
    "Pillow",
    "openpyxl",
    # Networking & Utilities
    "httpx",
    "boto3",
    "pandas",
    "structlog",
    "cloudinary>=1.44.1",
    "supadata",
    "authlib>=1.6.9",
]

[tool.uv]
dev-dependencies = [
    "pytest",
]
